[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster-tap"
version = "1.0.4"
description = "A simple tool to manage your cluster"
authors = [
    { name = "sudo_free", email = "ychong@petalmail.com" }
]
requires-python = ">=3.6"
keywords = ["cluster", "lasso-sustech"]

[project.urls]
"Homepage" = "https://github.com/lasso-sustech/cluster-tap"
"Bug Reports" = "https://github.com/lasso-sustech/cluster-tap/issues"

[project.scripts]
"cluster-tap" = "cluster_tap:cli.main"
